--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -29,6 +29,8 @@
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\RepeatNode.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\RetryNode.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\BlackBoard.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\SceneManagement\SceneManager.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\SceneManagement\Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -46,7 +48,6 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\ObjectBase.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\MonoBehaviourBase.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Defines.h" />
-    <ClInclude Include="include\DUOLGameEngine\Util\StringHelper.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Transform.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\TreeNode.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\SubTree.h" />
@@ -67,5 +68,7 @@
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\RetryNode.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\BlackBoard.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\SingletonBase.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\SceneManagement\SceneManager.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\SceneManagement\Scene.h" />
   </ItemGroup>
 </Project>
