--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -220,8 +220,10 @@
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\RetryNode.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\SceneManagement\SceneManager.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\SceneManagement\Scene.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\RendererBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\RendererBase.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\SceneManagement\Scene.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\SceneManagement\SceneManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\BlackBoard.cpp" />
